# llm-extractor

./: .dockerignore  .env.example  Dockerfile  audit.jsonl  cloudbuild.yaml  pyproject.toml
scripts/: compare.py  hello.py
src/llm_extractor/: __init__.py  api.py  config.py  data_sources.py  document.py  errors.py  extraction.py  models.py  pricing.py  prompts.py
src/llm_extractor/providers/: base.py  factory.py  gemini_provider.py  openai_provider.py
tests/: test_extraction.py
