[project]
name = "llm-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nipun Garg", email = "nipungarg.ak@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "httpx>=0.28.1",
    "instructor>=1.15.1",
    "langfuse>=4.7.1",
    "openai>=2.40.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
llm-extractor = "llm_extractor:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "datasets>=5.0.0",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
